--- a/główna.css
+++ b/główna.css
@@ -88,10 +88,12 @@ nav{
 }
 
 .logo{
-    width: 100px;
-    height: 100px;
-    background-color: rgb(103, 90, 21);
+    width: 110px;
+    height: 110px;
+    background-color: rgb(255, 255, 255);
     padding: 0;
+    border-radius: 50%;
+    border: none;
     margin: 0;
 }
 .logoLink{
@@ -115,16 +117,36 @@ nav{
 
     .navigation.show{
         right: 0;
+        margin-right: 0px;
     }
 
     .navigation ul{
         width: 100%;
+        display: flex;
         flex-direction: column;
+    }
+
+    .navigation ul .closeSidebar{
+        padding-right: 0px;
+    }
+
+    .navigation li{
+        background-color: black;
     }
 
     .navigation a{
         width: 100%;
         padding-left: 2.5rem;
         padding: 10px 0px;
+        background-color: black;
+    }
+}
+
+
+@media screen and (max-width: 450px){
+    .navigation.show{
+        right: 0;
+        margin-right: 0px;
+        width: 100vw;
     }
 }
